{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 13,
  "lineage": "3cff26d5-6605-dfb7-aed1-275cb0db28dc",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "portfolio_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bb06fb48-7739-4317-ab9a-718fef052c81/resourceGroups/portfolio/providers/Microsoft.Network/networkInterfaces/portfolio_nic",
            "internal_domain_name_suffix": "bxu2b4xhwytuvg1t32o032gpie.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bb06fb48-7739-4317-ab9a-718fef052c81/resourceGroups/portfolio/providers/Microsoft.Network/publicIPAddresses/portfolio_public_ip",
                "subnet_id": "/subscriptions/bb06fb48-7739-4317-ab9a-718fef052c81/resourceGroups/portfolio/providers/Microsoft.Network/virtualNetworks/portfolio_network/subnets/portfolio_subnet"
              }
            ],
            "location": "northeurope",
            "name": "portfolio_nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "portfolio"
          },
          "dependencies": [
            "azurerm_public_ip.portfolio_public_ip",
            "azurerm_resource_group.portfolio",
            "azurerm_subnet.portfolio_subnet",
            "azurerm_virtual_network.portfolio_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "portfolio_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb06fb48-7739-4317-ab9a-718fef052c81/resourceGroups/portfolio/providers/Microsoft.Network/networkSecurityGroups/portfolio_nsg",
            "location": "northeurope",
            "name": "portfolio_nsg",
            "resource_group_name": "portfolio",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http_rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.portfolio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/bb06fb48-7739-4317-ab9a-718fef052c81/resourceGroups/portfolio/providers/Microsoft.Network/networkSecurityGroups/portfolio_nsg/securityRules/http_rule",
            "name": "http_rule",
            "network_security_group_name": "portfolio_nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "portfolio",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.portfolio_nsg",
            "azurerm_resource_group.portfolio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "portfolio_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bb06fb48-7739-4317-ab9a-718fef052c81/resourceGroups/portfolio/providers/Microsoft.Network/publicIPAddresses/portfolio_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "98.71.97.207",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "portfolio_public_ip",
            "resource_group_name": "portfolio",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.portfolio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "portfolio_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bb06fb48-7739-4317-ab9a-718fef052c81/resourceGroups/portfolio/providers/Microsoft.Network/virtualNetworks/portfolio_network/subnets/portfolio_subnet",
            "name": "portfolio_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "portfolio",
            "virtual_network_name": "portfolio_network"
          },
          "dependencies": [
            "azurerm_resource_group.portfolio",
            "azurerm_virtual_network.portfolio_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "portfolio_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fac0e90d-b6e7-4a27-9b73-ef1daef0cf44",
            "id": "/subscriptions/bb06fb48-7739-4317-ab9a-718fef052c81/resourceGroups/portfolio/providers/Microsoft.Network/virtualNetworks/portfolio_network",
            "location": "northeurope",
            "name": "portfolio_network",
            "resource_group_name": "portfolio",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/bb06fb48-7739-4317-ab9a-718fef052c81/resourceGroups/portfolio/providers/Microsoft.Network/virtualNetworks/portfolio_network/subnets/portfolio_subnet",
                "name": "portfolio_subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.portfolio"
          ]
        }
      ]
    }
  ]
}